@@ -70,7 +70,7 @@ exclude_filename  = cpanfile
 ; Local Variables:
 ; mode: conf-windows
 ; eval: (load-project-state "unix-setuidwrapper")
-; tab-title: SetuidWrapper
+; tab-title: SUIDWrapper
 ; tab-width: 3
 ; End:
 ; vim: expandtab shiftwidth=3:
