@@ -1,0 +1,2 @@
+remove_secure_dir
+test_cmd
